--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2",
     "mongoose": "^5.0.14"
   },
   "devDependencies": {
