--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "md5": "^2.2.1",
     "mongoose": "^5.0.14"
   },
   "devDependencies": {
