--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "css-loader": "^0.28.11",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "style-loader": "^0.21.0"
   },
   "devDependencies": {
     "babel-loader": "^7.1.4",
