--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "start": "node src/server.js",
+    "start": "NODE_ENV=production node src/server.js",
+    "dev": "webpack-dev-server --mode development",
     "postinstall": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
