--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "NODE_ENV=production node src/server.js",
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
     "test": "jest"
   },
   "keywords": [],
