--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "md5": "^2.2.1",
-    "mongoose": "^5.0.14"
+    "mongoose": "^5.0.14",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
