--- a/client/package.json
+++ b/client/package.json
@@ -1,39 +1,20 @@
 {
-  "name": "caffeinehunt-client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "NODE_ENV=production node src/server.js",
-    "dev": "webpack-dev-server --mode development",
-    "postinstall": "webpack -p",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "caffeine",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "css-loader": "^0.28.11",
-    "express": "^4.16.3",
+    "apollo-boost": "^0.1.6",
+    "graphql": "^0.13.2",
     "react": "^16.3.2",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0",
-    "style-loader": "^0.21.0"
+    "react-scripts": "1.1.4",
+    "recompose": "^0.27.0"
   },
-  "devDependencies": {
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.1.2",
-    "webpack-dev-server": "^3.1.3"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
