--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,7 @@
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4",
-    "recompose": "^0.27.0"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
