--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_ENV=production react-scripts start",
+    "dev": "REACT_APP_ENV=development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
